--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ will be prosecuted to the maximum extent possible under law.
 
       <table align="right" class="logo">
         <tr>
-          <td class="logo" style="vertical-align:top; padding-right:0px;"><small><strong>webMUSHRA
+          <td class="logo" style="vertical-align:top; padding-right:0px;"><small><strong>PodAgent
               <!-- build:template:dev
               Dev
               /build -->
@@ -153,9 +153,9 @@ will be prosecuted to the maximum extent possible under law.
               /build -->
               by</strong></small>
           </td>
-          <td class="logo"><a href="https://www.audiolabs-erlangen.de/"><img src="design/images/alabs_new.png" class="logo"/></a></td>
-          <td class="logo"><a href="http://www.iis.fraunhofer.de/"><img src="design/images/iis.svg" class="logo" /></a></td>
-          <td class="logo"><a href="https://www.fau.eu/"><img src="design/images/techfak.svg" class="logo" /></a></td>
+          <td class="logo"><a href="https://www.audiolabs-erlangen.de/"><img src="design/images/cuhk_logo.jpg" class="logo"/></a></td>
+          <td class="logo"><a href="http://www.iis.fraunhofer.de/"><img src="design/images/hkust_logo.jpeg" class="logo" /></a></td>
+          <!-- <td class="logo"><a href="https://www.fau.eu/"><img src="design/images/techfak.svg" class="logo" /></a></td> -->
         </tr>
       </table>
 
