add survey template

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/misc/MushraValidator.js"></script>
     <script src="lib/webmushra/misc/WaveformVisualizer.js"></script>
     <script src="lib/webmushra/misc/LikertScale.js"></script>
+    <script src="lib/webmushra/misc/LikertScale2.js"></script>
     <script src="lib/webmushra/misc/FilePlayer.js"></script>
     <script src="lib/webmushra/misc/Localizer.js"></script>
     <script src="lib/webmushra/misc/Shuffle.js"></script>
