--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@ will be prosecuted to the maximum extent possible under law.
 
       <table align="right" class="logo">
         <tr>
-          <td class="logo" style="vertical-align:top; padding-right:0px;"><small><strong>PodAgent
+          <td class="logo" style="vertical-align:top; padding-right:0px;"><small><strong>
               <!-- build:template:dev
               Dev
               /build -->
               <!-- build:template
               <%= version %>
               /build -->
-              by</strong></small>
+              </strong></small>
           </td>
           <td class="logo"><a href="https://www.audiolabs-erlangen.de/"><img src="design/images/podbench.jpeg" class="logo"/></a></td>
           <!-- <td class="logo"><a href="http://www.iis.fraunhofer.de/"><img src="design/images/hkust_logo.jpeg" class="logo" /></a></td> -->
